some ui changes

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
           <h3>Cipher</h3>
         </div>
         <div class="data__item">
-          <label for="">Enter your text message</label>
-          <textarea name="" id="" cols="30" rows="5"></textarea>
+          <label for="txt">Enter your text message</label>
+          <textarea id="txt" cols="30" rows="5"></textarea>
         </div>
         <div class="data__item">
-          <label for="">Enter your secret key</label>
-          <input type="text" name="" id="">
+          <label for="key">Enter your secret key</label>
+          <input type="text" id="key">
         </div>
         <div class="data__item btns">
           <div class="btns__item">
-            <button>Encrypt</button>
+            <button class="active">Encrypt</button>
             <button>Decrypt</button>
           </div>
           <div class="btns__item">
@@ -44,16 +44,16 @@
           <h3>Result</h3>
         </div>
         <div class="data__item">
-          <label for="">Plain text</label>
-          <textarea name="" id="" cols="30" rows="5"></textarea>
+          <label for="plain-txt">Plain text</label>
+          <textarea id="plain-txt" cols="30" rows="5" readonly></textarea>
         </div>
         <div class="data__item">
-          <label for="">Generated key</label>
-          <input type="text" name="" id="">
+          <label for="result-key">Key</label>
+          <input type="text" id="result-key" readonly>
         </div>
         <div class="data__item">
           <label for="">Cipher text</label>
-          <textarea name="" id="" cols="30" rows="5"></textarea>
+          <textarea id="" cols="30" rows="5" readonly></textarea>
         </div>
       </div>
     </div>
